quote-service/src/snapshots/quote__serial__test__quote_file.snap
---
source: src/serial.rs
expression: "QuoteFile{id: 1, name: \"Good quotes\".to_string(), access: Permission::Manage,}"
---
{
  "id": 1,
  "name": "Good quotes",
  "access": "manage"
}
