quote-service/src/snapshots/quote__serial__test__quote_file_create_request.snap
---
source: src/serial.rs
expression: "QuoteFileCreateRequest{name: \"Good quotes\".to_string(),}"
---
{
  "name": "Good quotes"
}
