quote-service/src/snapshots/quote__serial__test__quote_file_create_response.snap
---
source: src/serial.rs
expression: "QuoteFileCreateResponse{file:\n                            QuoteFile{id: 1,\n                                      name: \"Good quotes\".to_string(),\n                                      access: Permission::Manage,},}"
---
{
  "id": 1,
  "name": "Good quotes",
  "access": "manage"
}
