quote-service/src/snapshots/quote__serial__test__session_create_response.snap
---
source: src/serial.rs
expression: "SessionCreateResponse{token: \"some-magik-token\".to_string(),}"
---
{
  "token": "some-magik-token"
}
