quote-service/src/snapshots/quote__serial__test__user_create_response.snap
---
source: src/serial.rs
expression: "UserCreateResponse{email: \"test@example.com\".to_string(),}"
---
{
  "email": "test@example.com"
}
